clean api_run and fix form

--- a/templates/data.html
+++ b/templates/data.html
@@ -73,7 +73,6 @@ aria-hidden="true">
                 <!-- <input type="text" name="contrib_type" id="contrib_type" class="form-control validate"> -->
                 <select class="custom-select custom-select-sm" name="contrib_type" id="contrib_type">
                     <option value="Sound">Sound</option>
-                    <option value="False" selected>False</option>
                 </select>
 
                 <label data-error="wrong" data-success="right" for="" >dico_id</label>
@@ -98,10 +97,11 @@ aria-hidden="true">
                 <label data-error="wrong" data-success="right" for="">user_name</label>
                 <!-- <input type="text" name="user_name" id="user_name" class="form-control validate"> -->
                 <select class="custom-select custom-select-sm" name="user_name" id="user_name">
-                    <option value="Anonymous" selected>Anonymous</option>
-                    <option value="Mikolov">Mikolov</option>
-                    <option value="Siyu">Siyu</option>
-                    <option value="Pierre">Pierre</option>
+                    <option value="Mikolov" selected>Mikolov</option>
+                    <option value="Siyu">Berger</option>
+                    <option value="Pierre">Taken</option>
+                    <option value="Pierre">Gate</option>
+                    <option value="Pierre">Fokwe</option>
                 </select>
 
                 <label data-error="wrong" data-success="right" for="">validate</label>
