--- a/templates/login_error.html
+++ b/templates/login_error.html
@@ -18,6 +18,6 @@
         <div class="alert alert-danger" role="alert" style="text-align: center;">
             {{ message }}
         </div>
-        <a href="{{ url_for('login') }}" style="margin: 0 auto; display:block; text-align: center" ><< Connection</a>
+        <a href="{{ url_for('login') }}" style="margin: 0 auto; display:block; text-align: center" ><< Connexion</a>
     </div>
 </body>
