clean code fix bug

--- a/templates/data.html
+++ b/templates/data.html
@@ -57,10 +57,10 @@ aria-hidden="true">
         <div class="modal-body mx-3">
             <div class="md-form mb-5">
                 <label data-error="wrong" data-success="right" for="">article_id</label>
-                <input type="text" name="article_id" id="article_id" class="form-control validate" required pattern="[0-9a-zA-Z-]+">
+                <input type="text" name="article_id" id="article_id" class="form-control validate" required pattern="[0-9a-zA-Z-_]+">
 
                 <label data-error="wrong" data-success="right" for="">contrib_data</label>
-                <input type="text" name="contrib_data" id="contrib_data" class="form-control validate " required pattern="[0-9a-zA-Z-]+.wav">
+                <input type="text" name="contrib_data" id="contrib_data" class="form-control validate " required pattern="[0-9a-zA-Z-_]+.wav">
 
                 <label data-error="wrong" data-success="right" for="">contrib_name</label>
                 <input type="text" name="contrib_name" id="contrib_name" class="form-control validate" required>
@@ -76,7 +76,7 @@ aria-hidden="true">
                 </select>
 
                 <label data-error="wrong" data-success="right" for="" >dico_id</label>
-                <input type="text" name="dico_id" id="dico_id" class="form-control validate" required pattern="[0-9a-zA-Z-]+">
+                <input type="text" name="dico_id" id="dico_id" class="form-control validate" required pattern="[0-9a-zA-Z-_]+">
 
                 <!-- <label data-error="wrong" data-success="right" for="">last_update</label>
                 <input type="text" name="last_update" id="last_update" class="form-control validate"> -->
@@ -89,10 +89,10 @@ aria-hidden="true">
                 </select>
 
                 <label data-error="wrong" data-success="right" for="">public_id</label>
-                <input type="text" name="public_id" id="public_id" class="form-control validate" required pattern="[0-9a-zA-Z-]+"">
+                <input type="text" name="public_id" id="public_id" class="form-control validate" required pattern="[0-9a-zA-Z-_]+"">
 
                 <label data-error="wrong" data-success="right" for="">user_id</label>
-                <input type="text" name="user_id" id="user_id" class="form-control validate" required pattern="[0-9a-zA-Z-]+">
+                <input type="text" name="user_id" id="user_id" class="form-control validate" required pattern="[0-9a-zA-Z-_]+">
 
                 <label data-error="wrong" data-success="right" for="">user_name</label>
                 <!-- <input type="text" name="user_name" id="user_name" class="form-control validate"> -->
